--- a/HTML/HTML_ПЗ_Module_6_7_Week_6_UA/HTML_ПЗ_Module_6_7_Week_6_UA_1.html
+++ b/HTML/HTML_ПЗ_Module_6_7_Week_6_UA/HTML_ПЗ_Module_6_7_Week_6_UA_1.html
@@ -6,44 +6,52 @@
     <title>NAME</title>
   </head>
   <style>
+    @media screen and (max-width: 600px)
+    {
+      .ParentContainer{
+        flex-direction: column;
+      }
+      .ParentContainer>.ImageContainer{
+        flex-basis: 100vw 40vh;
+      }
+      .ParentContainer>.Bottom{
+        max-height: 50px;
+      }
+    }
     .ParentContainer{
       box-shadow: 1px 1px 7px 5px lightgray;
-      margin: 20px;
       padding: 20px;
       max-width: max-content;
+      width: 100vw;
+      margin: auto;
+      display: flex;
     }
     .ImageContainer{
-      float: left;
       margin: 10px;
-      width: 30%;
-      border: 2px solid rgb(59, 58, 58);
+      flex-basis: 50vh;
     }
     img{
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%;
     }
     .Info{
       display: inline-block;
       margin: 10px;
-      min-width: 500px;
     }
     .Upload{
       display: flex;
-      border: 2px solid rgb(59, 58, 58);
-      width:100%;
+      box-shadow: 0px 0px 3px 3px lightgray;
     }
     .UploadPersents{
-      float: left;
-      background-color: cornflowerblue;
+      background-color: rgb(148, 168, 206);
       padding-left: 20px;
-      width:40%;
+      flex-basis: 40vw;
     }
     .UploadTime{
-      float: left;
       text-align: right;
       padding-right: 20px;
-      width: 60%;
+      flex-basis: 60vw;
     }
     .VideoTitle{
       float: left;
@@ -55,8 +63,7 @@
       background-color: darkblue;
       text-align: center;
       height: 50px;
-      width: 10%;
-      max-width: 600px;
+      flex-basis: 30vh;
     }
   </style>
   <body>
