--- a/HTML/HTML_ПЗ_Module_6_7_Week_6_UA/HTML_ПЗ_Module_6_7_Week_6_UA_2.html
+++ b/HTML/HTML_ПЗ_Module_6_7_Week_6_UA/HTML_ПЗ_Module_6_7_Week_6_UA_2.html
@@ -6,16 +6,47 @@
     <title>NAME</title>
   </head>
   <style>
+    @media screen and (max-width: 800px)
+    {
+      .ParentContainer{
+        flex-direction: column;
+      }
+      .Table>div{
+        flex-direction: row;
+      }
+    }
+    *{
+      padding: 0;
+      margin: 0;
+    }
     .ParentContainer{
       background-color: lightgray;
-      padding: 20px;
+      width: 100vw;
+      min-width: 300px;
       max-width: 1200px;
-      display: inline-block;
+      margin: auto;
+      padding: 20px;
+      min-height: 100vh;
+      max-height: auto;
+      display: flex;
     }
     .Text{
-      min-width: 300px;
-      max-width: 800px;
       margin: 10px;
+      flex-basis: 60vw;
+    }
+    p{
+      margin: 10px 0px;
+    }
+    .Table{
+      flex-direction: column;
+      display: flex;
+    }
+    table{
+      margin: 10px;
+      border-radius: 5%;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 14px;
+      background-color: dimgray;
     }
     thead{
       background-color: rgb(72, 61, 139, 0.8);
@@ -33,19 +64,11 @@
       padding-left: 20px;
       height: 40px;
     }
-    table{
-      margin: 10px;
-      border-radius: 5%;
-      font-family: 'Courier New', Courier, monospace;
-      font-size: 14px;
-      float: left;
-      min-width: 330px;
-      max-width: 45%;
-      background-color: dimgray;
-    }
   </style>
   <body>
+
     <div class="ParentContainer">
+
       <div class="Text">
         <h1>Introduction</h1>
         <p>
@@ -59,7 +82,9 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit amet quam natus aut distinctio esse aperiam voluptatum minima, fugit cumque officiis saepe vitae eveniet harum corrupti. Fugiat eligendi ab, voluptas quo cupiditate vel recusandae deleniti corrupti ducimus reprehenderit repudiandae. Sequi ex nam quae earum debitis doloribus et consectetur odit officia.
         </p>
       </div>
-      <div>
+
+      <div class="Table">
+
         <table>
           <thead>
             <tr>
@@ -78,8 +103,7 @@
             </tr>
           </tbody>
         </table>
-      </div>
-      <div>
+
         <table>
           <thead>
             <tr>
@@ -95,7 +119,10 @@
             </tr>
           </tbody>
         </table>
+
       </div>
+
     </div>
+
   </body>
 </html>
